--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: Feedbackloops
-Title: Feedback loop analysis for ecological networks
+Title: Feedback loop analysis for competition networks
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Franzi",
@@ -14,3 +14,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    magrittr
