updated namespace + fixed some external functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(assemble_jacobian)
 export(find_s)
 export(get_names)
+export(interaction_strengths)
 export(randomize_all)
 export(randomize_pw)
 export(randomize_pw2)
