--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     magrittr
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
