exported loop functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ export("%>%")
 export(assemble_jacobian)
 export(find_s)
 export(get_names)
+export(get_names_sans)
 export(interaction_strengths)
+export(loops)
 export(randomize_all)
 export(randomize_pw)
 export(randomize_pw2)
+export(read_abundance)
+export(read_contact_matrix)
 export(read_data)
 importFrom(magrittr,"%>%")
