--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
-    magrittr
+    dplyr,
+    magrittr, 
+    pracma, 
+    tictoc
 Suggests: 
     rmarkdown,
     knitr
