--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,12 @@ Imports:
     dplyr,
     magrittr, 
     pracma, 
-    tictoc
+    tictoc,
+    usethis,
+    gtools
 Suggests: 
     rmarkdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
