--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,16 +12,18 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.0
 Imports: 
     dplyr,
     magrittr, 
     pracma, 
-    tictoc,
+    purrr,
     usethis,
-    gtools
+    gtools,
+    rlang
 Suggests: 
     rmarkdown,
+    tictoc,
     knitr,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
