--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,23 @@
 export("%>%")
 export(assemble_jacobian)
 export(find_s)
+export(find_s_F)
+export(get_Fk)
 export(get_names)
 export(get_names_sans)
 export(interaction_strengths)
 export(loops)
+export(loops_parallel)
 export(randomize_all)
+export(randomize_asymmetric)
+export(randomize_asymmetric_hierarchical)
 export(randomize_pw)
-export(randomize_pw2)
 export(read_abundance)
 export(read_contact_matrix)
 export(read_data)
+export(replace_zeros)
+export(scale_interaction_table)
+export(scale_matrix)
+importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
