added minimal randomisation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(randomize_all)
 export(randomize_asymmetric)
 export(randomize_asymmetric_hierarchical)
 export(randomize_pw)
+export(randomize_minimal)
 export(read_abundance)
 export(read_contact_matrix)
 export(read_data)
