--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R:
            role = c("aut", "cre"),
            email = "franziska.koch@uni-hohenheim.de",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Tools to analyse the stability and feedback structure of ecological networks.
+Description: Tools to analyse the stability and feedback structure of competition networks.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -19,8 +19,8 @@ Imports:
     pracma, 
     purrr,
     foreach,
-    usethis,
     gtools,
+    usethis,
     rlang
 Suggests: 
     rmarkdown,
